NXP-29726: cleanup / format